This is a bad commit message, because it covers multiple files: Changed the last else if statement to be an else, added an alert when the user leaves the username field empty, modified README to instruct user to open the page in their browser and changed the Known Bugs section to Feature Plans, added header tag and closed all the div tags,  added custom css styling

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
 #output {
   display: none;
 }
+
+body {
+  background-color: rgb(101, 220, 224);
+  font-family: 'Kiwi Maru', serif;
+}
